log/build_2026-01-09_13-03-05/rbq_patrol/stdout_stderr.log
running egg_info
writing ../../build/rbq_patrol/rbq_patrol.egg-info/PKG-INFO
writing dependency_links to ../../build/rbq_patrol/rbq_patrol.egg-info/dependency_links.txt
writing entry points to ../../build/rbq_patrol/rbq_patrol.egg-info/entry_points.txt
writing requirements to ../../build/rbq_patrol/rbq_patrol.egg-info/requires.txt
writing top-level names to ../../build/rbq_patrol/rbq_patrol.egg-info/top_level.txt
reading manifest file '../../build/rbq_patrol/rbq_patrol.egg-info/SOURCES.txt'
writing manifest file '../../build/rbq_patrol/rbq_patrol.egg-info/SOURCES.txt'
running build
running build_py
copying trajectory/receiver.py -> /home/dev/gps_setting_ws/build/rbq_patrol/build/lib/trajectory
running install
running install_lib
copying /home/dev/gps_setting_ws/build/rbq_patrol/build/lib/trajectory/receiver.py -> /home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/trajectory
  File "/home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/trajectory/receiver.py", line 27
    print(f"fix_type: {fix_type} { {0:'NO_FIX', 2:'2D', 3:'3D'}.get(fix_type, 'UNKNOWN'))")
                                                                                          ^
SyntaxError: f-string: unmatched ')'

byte-compiling /home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/trajectory/receiver.py to receiver.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/rbq_patrol-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/rbq_patrol/rbq_patrol.egg-info to /home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/rbq_patrol-0.0.0-py3.10.egg-info
running install_scripts
Installing receiver script to /home/dev/gps_setting_ws/install/rbq_patrol/lib/rbq_patrol
writing list of installed files to '/home/dev/gps_setting_ws/build/rbq_patrol/install.log'
